# cAIdence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN_v0.3.0.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
caidence/: __init__.py  main.py  main_old.py
caidence/agent/: __init__.py
caidence/auth/: __init__.py
caidence/dashboard/: __init__.py
caidence/tools/: __init__.py  ctakes.py  document_filter.py  enhanced_visualizer.py  fhir_processor.py  negation_detector.py  query_manager.py  summarizer.py  visualizer.py
docker/: Dockerfile
docker/postgres/: init.sql
docs/: api-reference.md  architecture.md  getting-started.md  security.md  setup.md
examples/: basic_usage.py
scripts/: setup.sh
tests/: test_agent.py
